# blood_group_detection

./: Makefile  README.md  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
config/: config.yaml
docs/: mkdocs.yml
docs/docs/: index.md
logs/: running.logs
notebooks/: data_ingestion.ipynb  image_transformation.ipynb  model.ipynb  model_training.ipynb  preprocessing.ipynb  resnet.ipynb  vanilla_architecture.ipynb
notebooks/logs/: running.logs
src/: __init__.py
src/config/: configuration.py
src/constants/: __init__.py
src/data/: data_ingestion.py  preprocessing.py  split.py
src/entity/: config_entity.py
src/features/: image_transformation.py
src/models/: training.py
src/models/resnet/: model.py  resnet_params.yaml
src/models/vanilla/: model.py  vanilla_params.yaml
src/utils/: common.py
